<resources>
    <string name="app_name">Charge Point Locator</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="login_string">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_icon">App Icon</string>
    <string name="settings">Settings</string>
    <string name="users">Users</string>
    <string name="charge_points">Charge Point Map</string>
    <string name="id">ID</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="charge_point_database">Charge Point Database</string>
    <string name="separator">-----------------------------------------------</string>
    <string-array name="charge_point_status">
        <item>In service</item>
        <item>Out service</item>
    </string-array>
    <string-array name="charger_types">
        <item>All Types</item>
        <item>Type 1</item>
        <item>Type 2</item>
        <item>CCS</item>
        <item>CHAdeMO</item>
    </string-array>
</resources>