<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_chargepoints"
        android:title="@string/charge_points"
        android:iconTint="@color/gruvbox_fg"
        android:titleTextColor="@color/gruvbox_fg"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_chargepoint_database"
        android:title="@string/charge_point_database"
        android:iconTint="@color/gruvbox_fg"
        android:titleTextColor="@color/gruvbox_fg"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_users"
        android:title="@string/users"
        android:iconTint="@color/gruvbox_fg"
        android:titleTextColor="@color/gruvbox_fg"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:iconTint="@color/gruvbox_fg"
        android:titleTextColor="@color/gruvbox_fg"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:iconTint="@color/gruvbox_fg"
        android:titleTextColor="@color/gruvbox_fg"
        android:checkable="true"
        android:layout_gravity="bottom"/>
</menu>
