<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/gruvbox_bg">

    <!-- Container for the table -->
    <TableLayout
        android:id="@+id/userTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:background="@color/gruvbox_fg">

        <!-- Table Header -->
        <TableRow
            android:background="@color/gruvbox_blue">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@color/gruvbox_fg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@color/gruvbox_fg" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:padding="8dp"
                android:textColor="@color/gruvbox_fg" />
        </TableRow>
    </TableLayout>
</LinearLayout>
